# docker-dynamic

./: entrypoint.sh  main.py  pyproject.toml
