[tool.poetry]
name = "docker-dynamic"
version = "0.1.0"
description = ""
authors = ["Yankı Sırtaş <yankisirtas@hotmail.com>"]
readme = "README.md"
packages = [{include = "docker_dynamic"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
